--- a/starter_code/css/style.css
+++ b/starter_code/css/style.css
@@ -15,6 +15,7 @@ Developer @GA in NYC
      -moz-box-sizing: border-box; /* Firexfox */
      -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
      box-sizing: border-box; /* IE */
+     font-family: 'Open Sans', sans-serif;
 }
 
 /* Clear fix hack */
@@ -61,22 +62,135 @@ body {
 #container {
   width: 100%;
   margin: auto;
-  height: 500px;
+  height: 1300px;
 
 }
+
 
 header {
   background: url(../images/header_bg.jpg) no-repeat center top rgb(134,141,157);
+  width: 100%;
+  height: 100%;
   background-size: cover;
 }
 
+main {
+  width: 100%;
+  height: auto;
+  padding: 10%;
+}
+
 footer {
+  background: url(../images/testimonial_bg.jpg) no-repeat center bottom;
+  background-size: cover;
+  width: 100%;
+  height: auto;
+  font-size: 9px;
+  text-align: center;
 
 }
 
 /******************************************
 /* ADDITIONAL STYLES
 /*******************************************/
+
+.header1 {
+  font-weight: 800;
+  font-size: 24px;
+  color: #FFFFFF;
+  padding: 2% 10%;
+}
+
+.header2 {
+  font-size: 24px;
+  font-weight: 600;
+  color: #FFFFFF;
+  text-align: center;
+  margin: 10%;
+}
+
+.getButton {
+  font-weight: 800;
+  font-size: 14px;
+  background-color: #F9E42E;
+  border-radius: 5px;
+  text-align: center;
+  margin: 0 42%;
+  padding: 1%;
+}
+
+.main-header{
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 5%;
+  margin-right: 40%
+}
+
+.description-paragraph{
+  font-weight: 300;
+  font-size: 13px;
+  margin-bottom: 5%;
+}
+
+.list-of-abilities{
+  font-weight: 300;
+  font-size: 13px;
+  padding-left: 10%;
+  list-style-type: disc;
+  padding-bottom: 10%;
+}
+
+.quote {
+  font-weight: 400;
+  font-size: 18px;
+  color: #FFFFFF;
+  padding: 10% 20% 5% 20%;
+}
+
+.quote-author {
+  font-weight: 600;
+  font-size: 18px;
+  color: #FFFFFF;
+}
+
+.yellow-line {
+  background-color: #f9e42e;
+  margin: 50px 0;
+  padding: 10px 0;
+}
+
+.sign-up-now-button {
+  font-weight: 800;
+  background-color: #033048;
+  margin: 0 42%;
+  padding: 1%;
+  font-size: 12px;
+  border-radius: 5px;
+  color: #FFFFFF;
+}
+
+.relaxr-footer {
+  font-weight: 800;
+  color: #f9e42e;
+  font-size: 24px;
+  margin-bottom: 50px;
+}
+
+.twitter-image {
+  display: inline-block;
+  margin: 20px;
+}
+
+.facebook-image {
+  display: inline-block;
+  margin: 20px;
+}
+
+.copyright {
+  font-weight: 600;
+  font-size: 9px;
+  color: #FFFFFF;
+}
 
 
 
